# kronecker_generator

./: .gitignore  Makefile.in  configure.ac  csr_representation.cpp  csr_representation.hpp  kronecker_generator.cpp
